Began updating CSS to prettify application.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="appBanner">
-  <h1 class="appTitle">My Awesome Playlist</h1>
+  <div class="appTitle">My Awesome Playlist</div>
 </div>
 
-<router-outlet></router-outlet>
+<router-outlet class="appContent"></router-outlet>
