--- a/src/app/dashboard/video-list/video-list.component.html
+++ b/src/app/dashboard/video-list/video-list.component.html
@@ -5,3 +5,9 @@
   [videoData]="video"
   (click)="videoDataService.currentVideoSubject?.next(video)">
 </app-video-thumbnail>
+
+<app-video-thumbnail
+  *ngFor="let video of (videoListStream | async)"
+  [videoData]="video"
+  (click)="videoDataService.currentVideoSubject?.next(video)">
+</app-video-thumbnail>
