--- a/src/app/dashboard/video-player/video-player.component.html
+++ b/src/app/dashboard/video-player/video-player.component.html
@@ -1,3 +1,3 @@
 <ng-container *ngIf="(videoDataService.currentVideoSubject | async) as currentVideo">
-  <h1>Selected Video: {{currentVideo.title}} by {{currentVideo.author}}</h1>
+  <h1>Selected Video: {{currentVideo.title}} by {{currentVideo.artist}}</h1>
 </ng-container>
