--- a/src/app/dashboard/video-thumbnail/video-thumbnail.component.html
+++ b/src/app/dashboard/video-thumbnail/video-thumbnail.component.html
@@ -1,6 +1,10 @@
-<mat-card [class.selected]="videoData === (videoDataService.currentVideoSubject | async)">
+<!--<mat-card [class.selected]="videoData === (videoDataService.currentVideoSubject | async)">
     <mat-card-header>
       <mat-card-title>{{videoData.title}}</mat-card-title>
     </mat-card-header>
-    <mat-card-content>{{videoData.author}}</mat-card-content>
-  </mat-card>
+    <mat-card-content>{{videoData.artist}}</mat-card-content>
+  </mat-card>-->
+<div class="videoThumbnailContainer">
+  <div class="videoTitle">{{videoData.title}}</div>
+  <div class="videoArtist">{{videoData.artist}}</div>
+</div>
